fix sonarqube bullshit.